--- a/lor_analysis.ipynb
+++ b/lor_analysis.ipynb
@@ -2155,6 +2155,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
@@ -3013,7 +3018,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_results.to_excel(\"./report_length_results/academic_degree.xlsx\")"
+    "df_results.to_excel(r\"./report_length_results/academic_degree.xlsx\")"
    ]
   },
   {
@@ -5151,7 +5156,7 @@
     "    percentage_list = [agency_percentage,communality_percentage, grindstone_percentage, standout_percentage, social_percentage, radiology_percentage,keen_good_percentage]\n",
     "    df_result = pd.DataFrame({\"word_counts\":result_list,\n",
     "                  \"percentages\":percentage_list},index= list(result_dic.keys()))\n",
-    "    df_result.to_csv(f\"./word_counts_results/{column_name}.csv\")\n",
+    "    df_result.to_csv(fr\"./word_counts_results/{column_name}.csv\")\n",
     "    return result_dic"
    ]
   },
@@ -5421,7 +5426,7 @@
     "        odds_ratio_list.append(odds_ratio)\n",
     "        p_value_list.append(p_value)\n",
     "    df = pd.DataFrame({\"od\":odds_ratio_list,\"p\":p_value_list},index = word_type_list)\n",
-    "    df.to_csv(\"./word_odds_results/\"+csv_name)\n",
+    "    df.to_csv(r\"./word_odds_results/\"+csv_name)\n",
     "    return df"
    ]
   },
