--- a/lor_analysis.ipynb
+++ b/lor_analysis.ipynb
@@ -82,7 +82,7 @@
     "def clean_text(lor):\n",
     "    lor = re.sub(r\"\\n\",\" \",lor)\n",
     "    lor = re.sub(r\"\\\"\",\"\",lor)\n",
-    "    lor = re.sub(r\"\\\\\",\"\",lor)\n",
+    "    lor = re.sub(r\"/\",\"\",lor)\n",
     "    lor = re.sub(r\"\\(\",\"\",lor)\n",
     "    lor = re.sub(r\"\\)\",\"\",lor)\n",
     "    lor = re.sub(r\"\\s+\",\" \",lor)\n",
@@ -129,11 +129,11 @@
     "\n",
     "\n",
     "\n",
-    "# df1  = pd.read_excel(\".\\\\Data\\\\alperen_100.xlsx\")\n",
-    "# df2  = pd.read_excel(\".\\\\Data\\\\Master.xlsx\")\n",
-    "# df3  = pd.read_excel(\".\\\\Data\\\\RESEARCH -taranan.xlsx\")\n",
-    "# df4  = pd.read_excel(\".\\\\Data\\\\data_4.xlsx\")\n",
-    "# df5  = pd.read_excel(\".\\\\Data\\\\reference letter project updated20.09.2022.xlsx\")\n",
+    "# df1  = pd.read_excel(\"./Data/alperen_100.xlsx\")\n",
+    "# df2  = pd.read_excel(\"./Data/Master.xlsx\")\n",
+    "# df3  = pd.read_excel(\"./Data/RESEARCH -taranan.xlsx\")\n",
+    "# df4  = pd.read_excel(\"./Data/data_4.xlsx\")\n",
+    "# df5  = pd.read_excel(\"./Data/reference letter project updated20.09.2022.xlsx\")\n",
     "\n",
     "\n",
     "df = pd.concat([df1,df2,df3,df4,df5],axis=0)\n",
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_foreign =  pd.read_excel(\".\\\\df_master.xlsx\")"
+    "df_foreign =  pd.read_excel(\"./df_master.xlsx\")"
    ]
   },
   {
@@ -204,8 +204,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1  = pd.read_excel(\".\\\\Data\\\\alperen.xlsx\")\n",
-    "df2  = pd.read_excel(\".\\\\Data\\\\sude.xlsx\")\n",
+    "df1  = pd.read_excel(\"./Data/alperen.xlsx\")\n",
+    "df2  = pd.read_excel(\"./Data/sude.xlsx\")\n",
     "\n",
     "\n",
     "df = pd.concat([df1,df2],axis=0)"
@@ -4233,7 +4233,7 @@
     }
    ],
    "source": [
-    "df_word_list[\"Agency\"].str.strip().str.lower().str.replace(r\"\\*\",r\"\\\\w*\").dropna().tolist()"
+    "df_word_list[\"Agency\"].str.strip().str.lower().str.replace(r\"\\*\",r\"/w*\").dropna().tolist()"
    ]
   },
   {
@@ -4552,7 +4552,7 @@
     "    percentage_list = [agency_percentage,communality_percentage, grindstone_percentage, standout_percentage, social_percentage, radiology_percentage,keen_good_percentage]\n",
     "    df_result = pd.DataFrame({\"word_counts\":result_list,\n",
     "                  \"percentages\":percentage_list},index= list(result_dic.keys()))\n",
-    "    df_result.to_csv(f\".\\\\word_counts_results\\\\{column_name}.csv\")\n",
+    "    df_result.to_csv(f\"./word_counts_results/{column_name}.csv\")\n",
     "    return result_dic"
    ]
   },
@@ -4822,7 +4822,7 @@
     "        odds_ratio_list.append(odds_ratio)\n",
     "        p_value_list.append(p_value)\n",
     "    df = pd.DataFrame({\"od\":odds_ratio_list,\"p\":p_value_list},index = word_type_list)\n",
-    "    df.to_csv(\".\\\\word_odds_results\\\\\"+csv_name)\n",
+    "    df.to_csv(\"./word_odds_results/\"+csv_name)\n",
     "    return df"
    ]
   },
