--- a/lor_analysis.ipynb
+++ b/lor_analysis.ipynb
@@ -118,11 +118,11 @@
     "\n",
     "\n",
     "\n",
-    "# df1  = pd.read_excel(\".\\\\Data\\\\alperen_100.xlsx\")\n",
-    "# df2  = pd.read_excel(\".\\\\Data\\\\Master.xlsx\")\n",
-    "# df3  = pd.read_excel(\".\\\\Data\\\\RESEARCH -taranan.xlsx\")\n",
-    "# df4  = pd.read_excel(\".\\\\Data\\\\data_4.xlsx\")\n",
-    "# df5  = pd.read_excel(\".\\\\Data\\\\reference letter project updated20.09.2022.xlsx\")\n",
+    "# df1  = pd.read_excel(\"./Data/alperen_100.xlsx\")\n",
+    "# df2  = pd.read_excel(\"./Data/Master.xlsx\")\n",
+    "# df3  = pd.read_excel(\"./Data/RESEARCH -taranan.xlsx\")\n",
+    "# df4  = pd.read_excel(\"./Data/data_4.xlsx\")\n",
+    "# df5  = pd.read_excel(\"./Data/reference letter project updated20.09.2022.xlsx\")\n",
     "\n",
     "\n",
     "df = pd.concat([df1,df2,df3,df4,df5],axis=0)\n",
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_foreign =  pd.read_excel(\".\\\\df_master.xlsx\")"
+    "df_foreign =  pd.read_excel(\"./df_master.xlsx\")"
    ]
   },
   {
@@ -193,8 +193,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1  = pd.read_excel(\".\\\\Data\\\\alperen.xlsx\")\n",
-    "df2  = pd.read_excel(\".\\\\Data\\\\sude.xlsx\")\n",
+    "df1  = pd.read_excel(\"./Data/alperen.xlsx\")\n",
+    "df2  = pd.read_excel(\"./Data/sude.xlsx\")\n",
     "\n",
     "\n",
     "df = pd.concat([df1,df2],axis=0)"
@@ -3015,7 +3015,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_results.to_excel(r\".\\\\report_length_results\\\\academic_degree.xlsx\")"
+    "df_results.to_excel(\"./report_length_results/academic_degree.xlsx\")"
    ]
   },
   {
@@ -4466,7 +4466,7 @@
     "                  \"Not applicable/Unknown\"]\n",
     "\n",
     "    df = pd.DataFrame({\"counts\":count_list, \"percentage\":percentage_list},index =index_list ) \n",
-    "    df.to_csv(\".\\\\demographics_results\\\\\" + csv_name + \".csv\")"
+    "    df.to_csv(\"./demographics_results/\" + csv_name + \".csv\")"
    ]
   },
   {
@@ -5153,7 +5153,7 @@
     "    percentage_list = [agency_percentage,communality_percentage, grindstone_percentage, standout_percentage, social_percentage, radiology_percentage,keen_good_percentage]\n",
     "    df_result = pd.DataFrame({\"word_counts\":result_list,\n",
     "                  \"percentages\":percentage_list},index= list(result_dic.keys()))\n",
-    "    df_result.to_csv(\".\\\\word_counts_results\\\\{}.csv\".format(column_name))\n",
+    "    df_result.to_csv(\"./word_counts_results/{}.csv\".format(column_name))\n",
     "    return result_dic"
    ]
   },
@@ -5423,7 +5423,7 @@
     "        odds_ratio_list.append(odds_ratio)\n",
     "        p_value_list.append(p_value)\n",
     "    df = pd.DataFrame({\"od\":odds_ratio_list,\"p\":p_value_list},index = word_type_list)\n",
-    "    df.to_csv(r\".\\\\word_odds_results\\\\\"+csv_name)\n",
+    "    df.to_csv(r\"./word_odds_results/\"+csv_name)\n",
     "    return df"
    ]
   },
@@ -7374,7 +7374,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.undefined"
   },
   "orig_nbformat": 4,
   "vscode": {
