--- a/lor_analysis.ipynb
+++ b/lor_analysis.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'stanza'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[12], line 6\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mnltk\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mtokenize\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m word_tokenize\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m----> 6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mstanza\u001b[39;00m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m \n\u001b[0;32m      8\u001b[0m pd\u001b[38;5;241m.\u001b[39moptions\u001b[38;5;241m.\u001b[39mdisplay\u001b[38;5;241m.\u001b[39mmax_rows \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2000\u001b[39m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'stanza'"
+     ]
+    }
+   ],
    "source": [
     "#%%\n",
     "\n",
@@ -29,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1435,6 +1447,11 @@
     "\"\"\"\n",
     "#%%\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4754,7 +4771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4767,65 +4784,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['achieve\\\\w*',\n",
-       " 'active\\\\w*',\n",
+       "['achieve*',\n",
+       " 'active*',\n",
        " 'aggressive',\n",
-       " 'ambitio\\\\w*',\n",
-       " 'analyt\\\\w*',\n",
-       " 'aspirat\\\\w*',\n",
+       " 'ambitio*',\n",
+       " 'analyt*',\n",
+       " 'aspirat*',\n",
        " 'assertive',\n",
        " 'attention',\n",
-       " 'autonom\\\\w*',\n",
-       " 'competen\\\\w*',\n",
+       " 'autonom*',\n",
+       " 'competen*',\n",
        " 'competing',\n",
-       " 'confiden\\\\w*',\n",
-       " 'courage\\\\w*',\n",
+       " 'confiden*',\n",
+       " 'courage*',\n",
        " 'decisive',\n",
-       " 'dedicat\\\\w*',\n",
+       " 'dedicat*',\n",
        " 'defend',\n",
        " 'desire',\n",
        " 'determination',\n",
        " 'determined',\n",
-       " 'force\\\\w*',\n",
+       " 'force*',\n",
        " 'goal oriented',\n",
        " 'goal-oriented',\n",
-       " 'hard work\\\\w*',\n",
-       " 'independen\\\\w*',\n",
+       " 'hard work*',\n",
+       " 'independen*',\n",
        " 'industrious',\n",
-       " 'industrious\\\\w*',\n",
-       " 'intelligen\\\\w*',\n",
-       " 'lead\\\\w*',\n",
+       " 'industrious*',\n",
+       " 'intelligen*',\n",
+       " 'lead*',\n",
        " 'master',\n",
        " 'mastered',\n",
        " 'mastery',\n",
        " 'outspoken',\n",
        " 'rewards',\n",
-       " 'self direct\\\\w*',\n",
+       " 'self direct*',\n",
        " 'self motivated',\n",
        " 'self starter',\n",
-       " 'self-assure\\\\w*',\n",
-       " 'self-direct\\\\w*',\n",
+       " 'self-assure*',\n",
+       " 'self-direct*',\n",
        " 'self driven',\n",
        " 'self-driven',\n",
        " 'self-motivated',\n",
-       " 'self-relian\\\\w*',\n",
+       " 'self-relian*',\n",
        " 'self-starter',\n",
        " 'serious',\n",
-       " 'skill\\\\w*',\n",
+       " 'skill*',\n",
        " 'strong',\n",
        " 'tough',\n",
        " 'under pressure',\n",
@@ -4833,39 +4842,93 @@
        " 'work-ethic']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_word_list[\"Agency\"].str.strip().str.lower().str.replace(r\"\\*\",r\"\\\\w*\").dropna().tolist()"
+    "df_word_list[\"Agency\"].str.strip().str.lower().str.replace(r\"\\*\",\"\\\\w*\").dropna().tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n",
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:2: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \n",
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:3: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  This is separate from the ipykernel package so we can avoid doing imports until\n",
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:4: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  after removing the cwd from sys.path.\n",
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:5: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \"\"\"\n",
-      "/Users/benanakca/opt/anaconda3/envs/search_engine/lib/python3.7/site-packages/ipykernel_launcher.py:6: FutureWarning: The default value of regex will change from True to False in a future version.\n",
-      "  \n"
-     ]
+     "data": {
+      "text/plain": [
+       "0          Achieve* \n",
+       "1           Active* \n",
+       "2        Aggressive \n",
+       "3          Ambitio* \n",
+       "4           Analyt* \n",
+       "5           Aspirat*\n",
+       "6         Assertive \n",
+       "7          Attention\n",
+       "8          Autonom* \n",
+       "9         Competen* \n",
+       "10         Competing\n",
+       "11        Confiden* \n",
+       "12         Courage* \n",
+       "13         Decisive \n",
+       "14         Dedicat* \n",
+       "15           Defend \n",
+       "16            Desire\n",
+       "17     Determination\n",
+       "18       Determined \n",
+       "19           Force* \n",
+       "20     Goal oriented\n",
+       "21     Goal-oriented\n",
+       "22        Hard work*\n",
+       "23      Independen* \n",
+       "24       Industrious\n",
+       "25      Industrious*\n",
+       "26      Intelligen* \n",
+       "27             Lead*\n",
+       "28           Master \n",
+       "29          Mastered\n",
+       "30           Mastery\n",
+       "31        Outspoken \n",
+       "32          Rewards \n",
+       "33      Self direct*\n",
+       "34    Self motivated\n",
+       "35      Self starter\n",
+       "36      Self-assure*\n",
+       "37      Self-direct*\n",
+       "38       Self driven\n",
+       "39       Self-driven\n",
+       "40    Self-motivated\n",
+       "41     Self-relian* \n",
+       "42      Self-starter\n",
+       "43           Serious\n",
+       "44            Skill*\n",
+       "45           Strong \n",
+       "46            Tough \n",
+       "47    Under pressure\n",
+       "48        Work ethic\n",
+       "49        Work-ethic\n",
+       "50               NaN\n",
+       "51               NaN\n",
+       "52               NaN\n",
+       "Name: Agency, dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "df_word_list[\"Agency\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "agency = df_word_list[\"Agency\"].str.strip().str.lower().str.replace(r\"\\*\",r\"\\\\w*\").dropna().tolist()\n",
     "communality = df_word_list[\"Communality\"].str.strip().str.lower().str.replace(r\"\\*\",r\"\\\\w*\").dropna().tolist()\n",
@@ -4874,6 +4937,75 @@
     "social = df_word_list[\"Social\"].str.strip().str.lower().str.replace(r\"\\*\",r\"\\\\w*\").dropna().tolist()\n",
     "radiology = df_word_list[\"Radiology\"].str.strip().str.lower().str.replace(r\"\\*\",r\"\\\\w*\").dropna().tolist()\n",
     "keen_good = [\"keen eye\",\"good eye\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['achieve*',\n",
+       " 'active*',\n",
+       " 'aggressive',\n",
+       " 'ambitio*',\n",
+       " 'analyt*',\n",
+       " 'aspirat*',\n",
+       " 'assertive',\n",
+       " 'attention',\n",
+       " 'autonom*',\n",
+       " 'competen*',\n",
+       " 'competing',\n",
+       " 'confiden*',\n",
+       " 'courage*',\n",
+       " 'decisive',\n",
+       " 'dedicat*',\n",
+       " 'defend',\n",
+       " 'desire',\n",
+       " 'determination',\n",
+       " 'determined',\n",
+       " 'force*',\n",
+       " 'goal oriented',\n",
+       " 'goal-oriented',\n",
+       " 'hard work*',\n",
+       " 'independen*',\n",
+       " 'industrious',\n",
+       " 'industrious*',\n",
+       " 'intelligen*',\n",
+       " 'lead*',\n",
+       " 'master',\n",
+       " 'mastered',\n",
+       " 'mastery',\n",
+       " 'outspoken',\n",
+       " 'rewards',\n",
+       " 'self direct*',\n",
+       " 'self motivated',\n",
+       " 'self starter',\n",
+       " 'self-assure*',\n",
+       " 'self-direct*',\n",
+       " 'self driven',\n",
+       " 'self-driven',\n",
+       " 'self-motivated',\n",
+       " 'self-relian*',\n",
+       " 'self-starter',\n",
+       " 'serious',\n",
+       " 'skill*',\n",
+       " 'strong',\n",
+       " 'tough',\n",
+       " 'under pressure',\n",
+       " 'work ethic',\n",
+       " 'work-ethic']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agency"
    ]
   },
   {
@@ -4923,7 +5055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4938,7 +5070,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\\\bachieve*\\\\b|\\\\bactive*\\\\b|\\\\baggressive\\\\b|\\\\bambitio*\\\\b|\\\\banalyt*\\\\b|\\\\baspirat*\\\\b|\\\\bassertive\\\\b|\\\\battention\\\\b|\\\\bautonom*\\\\b|\\\\bcompeten*\\\\b|\\\\bcompeting\\\\b|\\\\bconfiden*\\\\b|\\\\bcourage*\\\\b|\\\\bdecisive\\\\b|\\\\bdedicat*\\\\b|\\\\bdefend\\\\b|\\\\bdesire\\\\b|\\\\bdetermination\\\\b|\\\\bdetermined\\\\b|\\\\bforce*\\\\b|\\\\bgoal oriented\\\\b|\\\\bgoal-oriented\\\\b|\\\\bhard work*\\\\b|\\\\bindependen*\\\\b|\\\\bindustrious\\\\b|\\\\bindustrious*\\\\b|\\\\bintelligen*\\\\b|\\\\blead*\\\\b|\\\\bmaster\\\\b|\\\\bmastered\\\\b|\\\\bmastery\\\\b|\\\\boutspoken\\\\b|\\\\brewards\\\\b|\\\\bself direct*\\\\b|\\\\bself motivated\\\\b|\\\\bself starter\\\\b|\\\\bself-assure*\\\\b|\\\\bself-direct*\\\\b|\\\\bself driven\\\\b|\\\\bself-driven\\\\b|\\\\bself-motivated\\\\b|\\\\bself-relian*\\\\b|\\\\bself-starter\\\\b|\\\\bserious\\\\b|\\\\bskill*\\\\b|\\\\bstrong\\\\b|\\\\btough\\\\b|\\\\bunder pressure\\\\b|\\\\bwork ethic\\\\b|\\\\bwork-ethic\\\\b'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "agency_pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4956,7 +5115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4967,6 +5126,26 @@
     "social_pattern = create_pattern(social)\n",
     "radiology_pattern = create_pattern(radiology)\n",
     "keen_good_pattern = create_pattern(keen_good)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(agency_pattern,\"achieving\")"
    ]
   },
   {
@@ -7374,7 +7553,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.undefined"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
